# rust-audio

./: .gitignore  CODEBASE.md  Cargo.toml  README.md  setup.sh
asd/: project.json
examples/nada_es_para_siempre/: project.json
src/: audio_context.rs  audio_engine.rs  lib.rs  main.rs  master_bus.rs  project.rs  session.rs
src/analysis/: mod.rs
src/device/: mod.rs
src/effects/: adjust_volume.rs  delay.rs  duplicate.rs  large_reverb.rs  mod.rs  pan.rs  pan_left.rs  pan_right.rs  pitch_octave_up.rs  random_noise.rs  reverse.rs  tape_saturation.rs  tremolo.rs
src/input/: mod.rs
src/processor/: mod.rs
src/tones/: mod.rs
src/track/: mod.rs  monitoring.rs  playback.rs  recording.rs
src/ui/: audio_preferences_screen.rs  daw_screen.rs  debug_logger.rs  effects_screen.rs  event_handler.rs  fx_chain_editor_screen.rs  main_menu_screen.rs  mod.rs  record_mic_screen.rs  screen_trait.rs  synth_screen.rs  view.rs
src/ui/daw_screen/: input.rs  mod.rs  render.rs
src/utils/: header.rs  mod.rs  normalize.rs  wav.rs
src/wav/: mod.rs
