[package]
name = "rust-audio"
version = "0.1.0"
edition = "2021"
default-run = "rust-audio"

[dependencies]
rand = "0.8.5"
rustfft = "6.2.0"
plotters = "0.3.3"
cpal = "0.16.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = { version = "0.27.2", features = ["derive"] }
ringbuf = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"